Fix toggle button wrapping

--- a/src/app/common/toggle-button/toggle-button.component.scss
+++ b/src/app/common/toggle-button/toggle-button.component.scss
@@ -1,5 +1,8 @@
 .toggle-button {
+  display: flex;
+
   button {
+    white-space: nowrap;
     cursor: pointer;
     border: none;
     color: var(--on-surface-variant);
